--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,70 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+*, *::after, *::before{
+  box-sizing: border-box;
+}
+
+body{
+  font-size: 20px;
+  font-family: Inter, sans-serif;
+  background-color: #F5F7FB;
+  position: relative;
+}
+
+div#root{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.top-yellow-blob{
+  width: 800px;
+  position: fixed;
+  opacity: 0.25;
+  top:-500px;
+  right:-350px;
+}
+
+.bot-yellow-blob{
+  width: 800px;
+  position: fixed;
+  opacity: 0.15;
+  bottom:-500px;
+  left:-350px; 
+  filter: invert(55%) sepia(100%) saturate(5000%) hue-rotate(180deg);
+}
+
+.first-page-title{
+  font-size: 1.953125rem;
+  font-weight: bold;
+  color: #293264;
+}
+
+.first-page-desc{
+  color: #293264;
+}
+.start-btn{
+  color: #F5F7FB;
+  background-color: #4D5B9E;
+  border: none;
+  border-radius: 15px;
+  padding: 18px 65px;
+  margin: 30px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: all 0.15s ease
+}
+.start-btn:hover{
+  background-color: darkblue; /* changes when mouse is over */
+  cursor: pointer;
+}
+
+.start-btn:active{
+  background-color: navy;  /* darker when pressed */
+  transform: scale(0.95);
 }
